# web-sw-cor24-plsw

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
.agentrail/: domains.toml  plan.md  saga.toml  step0-summary.md
.agentrail/sessions/: 18db16a5-550d-4d74-8e52-0b591e976425.jsonl  30615ebd-1482-486b-8b8c-4fabc0fb9248.jsonl  341cb241-2184-40b7-8037-f66bcdc770c7.jsonl  361eb46f-71ae-4164-b876-36298bf4f64f.jsonl  a330ec16-fc86-41b0-9e64-729f69138248.jsonl  b58d10ab-a473-4303-9f54-4e58310bc45d.jsonl  d55af799-aee7-4386-90f6-2bce12caa945.jsonl
.agentrail/steps/001-scaffold-yew-project/: prompt.md  step.toml  summary.md
.agentrail/steps/002-002-wasm-emulator-integration/: prompt.md  step.toml  summary.md
.agentrail/steps/003-003-source-editor/: prompt.md  step.toml  summary.md
.agentrail/steps/004-004-macro-editor/: prompt.md  step.toml  summary.md
.agentrail/steps/005-005-compiler-integration/: prompt.md  step.toml  summary.md
.agentrail/steps/006-006-macro-expansion-view/: prompt.md  step.toml  summary.md
docs/: ai_agent_instructions.md  architecture.md  design.md  initial-prompt.txt  prd.md
pages/: app-265886901d0371c9.css  index.html  web-sw-cor24-plsw-66faf3d366164a9b.js  web-sw-cor24-plsw-66faf3d366164a9b_bg.wasm  web-sw-cor24-plsw-d25cc1659fa2a8ec_bg.wasm
scripts/: build-pages.sh  build.sh  deploy.sh  serve.sh
src/: app.css  demos.rs  lib.rs  main.rs  pipeline.rs  preprocessor.rs
src/components/: macro_editor.rs  macro_expansion.rs  mod.rs  source_editor.rs  wizard.rs
(+1 files in other folders)
