[package]
name = "web-sw-cor24-plsw"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "Browser-based PL/SW development environment on COR24"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cor24-emulator = { path = "../sw-cor24-emulator", default-features = false }
cor24-isa = { path = "../sw-cor24-emulator/isa", features = ["serde"] }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "HtmlTextAreaElement", "HtmlInputElement", "HtmlSelectElement", "HtmlElement", "KeyboardEvent"] }
gloo = "0.11"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
